deploy/mlflow/ingress-mlflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: mlflow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host localhost;
spec:
  ingressClassName: nginx
  tls:
    - secretName: mlflow-tls
      hosts:
        - mlflow.group-jsti.dski23a.timebertt.dev
  rules:
    - host: mlflow.group-jsti.dski23a.timebertt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 80
